fix for broken styles

--- a/minimalism.css
+++ b/minimalism.css
@@ -562,18 +562,18 @@ hr {
 
 /* --- DESCRIPTION AREA --- */
 
-.titlebox blockquote {
+.side .md blockquote {
     padding: 15px;
     border: 1px solid #DDD;
     border-radius: 5px;
     margin: 1.5em 0;
 }
 
-.titlebox blockquote p {
+.side .md blockquote p {
     margin: .5em 0;
 }
 
-.titlebox blockquote p a {
+.side blockquote p a {
     font-size: 1.1em;
     text-decoration: underline;
 }
@@ -588,12 +588,12 @@ hr {
     color: #D6257A;
 }
 
-.titlebox blockquote + hr {
+.md hr {
     display: none;
 }
 
-.titlebox ol {
-    margin-left: 1.4em;
+.titlebox ol + ul {
+    margin: 1em !important;
 }
 .titlebox ol li {
     margin-bottom: .4em;
@@ -604,24 +604,24 @@ hr {
 }
 
 .titlebox h1 a {
-    color: #555;
+    color: #222;
     letter-spacing: 1px;
     font-weight: normal;
     font-family: tahoma;
 }
 
-.titlebox h2 {
+.side .md h2 {
     font-size: 1.4em;
     font-weight: normal;
 }
 
-.titlebox h3 {
+.side .md h3 {
     font-size: 1.2em;
     font-weight: normal;
     color: #555;
 }
 
-.titlebox ul + h3 {
+.side .md ul + h3 {
     margin-top: 1.5em;
 }
 
@@ -629,6 +629,9 @@ hr {
 
 .md p, .md h1 { margin: 7px 0; }
 .md p:first-child { margin-top: 3px; }
+
+.md ul,
+.md ol { padding-left: 1.4em; }
 
 .comment .child { 
    margin-top: 15px; 
@@ -652,6 +655,7 @@ hr {
     font-weight: normal;
     padding: 10px 10px 5px 0;
     color: #777;
+    margin: -0.5em 0 1em;
 }
 
 .thing .title.loggedin { 
@@ -719,6 +723,10 @@ hr {
 .flairselector .status,
 .flairselector li a {
     display: none !important;
+}
+
+.flairselector form button {
+    margin-left: 0;
 }
 
 .flairselector ul {
